--- a/frontend/src/components/partials/viewer/Inputs.astro
+++ b/frontend/src/components/partials/viewer/Inputs.astro
@@ -106,7 +106,7 @@
               <span
                 x-text="filepath.split('/').slice(0, -1).join('/')"
                 :class="{'text-gray-100': filepath === results.result.file_path}"
-                class="text-gray-400 w-1/2 truncate"></span>
+                class="text-gray-400 truncate"></span>
               <span class="text-slate-400">/</span>
               <span
                 x-text="filepath.split('/').pop()"
