--- a/frontend/src/components/partials/viewer/Inputs.astro
+++ b/frontend/src/components/partials/viewer/Inputs.astro
@@ -56,7 +56,7 @@
   </template>
 
   <!-- Dropdown menu -->
-  <div class="z-10 rounded-lg shadow w-full bg-gray-700 pb-5 mt-5">
+  <div class="z-10 rounded-lg shadow w-full bg-gray-900 pb-5 mt-5">
     <div class="p-3">
       <label for="input-group-search" class="sr-only">Search</label>
       <div class="relative">
@@ -105,13 +105,13 @@
             >
               <span
                 x-text="filepath.split('/').slice(0, -1).join('/')"
-                :class="{'text-gray-100': filepath === results.result.file_path}"
-                class="text-gray-400 truncate"></span>
+                :class="{'text-blue-500': filepath === results.result.file_path}"
+                class="truncate"></span>
               <span class="text-slate-400">/</span>
               <span
                 x-text="filepath.split('/').pop()"
-                class="text-gray-200 truncate"
-                :class="{'font-bold': filepath === results.result.file_path}"
+                class="truncate"
+                :class="{'font-bold text-gray-200': filepath === results.result.file_path}"
               ></span>
             </label>
           </div>
