--- a/frontend/src/components/partials/viewer/Inputs.astro
+++ b/frontend/src/components/partials/viewer/Inputs.astro
@@ -55,7 +55,6 @@
     </pre>
   </template>
 
-  <!-- Dropdown menu -->
   <div class="z-10 rounded-lg shadow w-full bg-gray-900 pb-5 mt-5">
     <div class="p-3">
       <label for="input-group-search" class="sr-only">Search</label>
@@ -87,32 +86,41 @@
       class="max-h-48 px-3 pb-3 overflow-y-auto text-sm text-gray-200 no-scrollbar break-all"
     >
       <template x-for="(filepath, index) in results.file_paths">
-        <li :class="{'shadow-2xl': filepath === results.result.file_path}">
+        <li :class="{'shadow-2xl': filepath.file_path === results.result.file_path}">
           <div
             class="flex items-center ps-2 m-1 rounded hover:bg-gray-800"
-            :class="{'bg-gray-800 border-2 border-gray-900': filepath === results.result.file_path}"
-            @click="input.page=1; input.file_path = filepath; submit()"
+            :class="{'bg-gray-800 border-2 border-gray-900': filepath.file_path === results.result.file_path}"
+            @click="input.page=1; input.file_path = filepath.file_path; submit()"
           >
             <input
               type="radio"
-              :value="filepath"
+              :value="filepath.file_path"
               class="w-5 h-5 rounded"
               x-model="input.file_path"
             />
+
+
             <label
-              :class="{'text-blue-400': filepath === results.result.file_path, 'text-slate-400': filepath !== results.result.file_path}"
+              :class="{'text-blue-400': filepath.file_path === results.result.file_path, 'text-slate-400': filepath.file_path !== results.result.file_path}"
               class="w-full py-2 ms-2 text-sm font-mono rounded flex items-center"
             >
+                <template x-if="filepath.type == 'stdin'">
+                    <span class="w-1/12 text-xs font-medium me-2 px-2.5 py-0.5 text-center rounded bg-gray-700 text-yellow-300">STDIN</span>
+                </template>
+                <template x-if="filepath.type == 'file'">
+                    <span class="w-1/12 text-xs font-medium me-2 px-2.5 py-0.5 text-center rounded bg-gray-700 text-green-300">FILE</span>
+                </template>
               <span
-                x-text="filepath.split('/').slice(0, -1).join('/')"
-                :class="{'text-blue-500': filepath === results.result.file_path}"
+                x-text="filepath.file_path.split('/').slice(0, -1).join('/')"
+                :class="{'text-blue-500': filepath.file_path === results.result.file_path}"
                 class="truncate"></span>
               <span class="text-slate-400">/</span>
               <span
-                x-text="filepath.split('/').pop()"
+                x-text="filepath.file_path.split('/').pop()"
                 class="truncate"
-                :class="{'font-bold text-gray-200': filepath === results.result.file_path}"
+                :class="{'font-bold text-gray-200': filepath.file_path === results.result.file_path}"
               ></span>
+              <span class="text-gray-400 ml-2" x-text="`(${formatBytes(filepath.file_size)} - ${numberToK(filepath.lines_count)} lines)`"></span>
             </label>
           </div>
         </li>
