(ui) grouped output

--- a/frontend/src/components/Viewer.astro
+++ b/frontend/src/components/Viewer.astro
@@ -23,7 +23,7 @@ const baseURL = import.meta.env.PUBLIC_BASE_URL;
   let input = Alpine.reactive({
     query: "",
     file_path: "",
-    realtime: false,
+    realtime: true,
     reverse: true,
     host: "",
     page: 1,
